--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "babel.config.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc",
+    "a": "node dist/index.js input/a.txt",
+    "b": "node dist/index.js input/b.txt",
+    "c": "node dist/index.js input/c.txt",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +19,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.5",
     "babel-jest": "^27.2.5",
     "ts-node": "^10.3.0"
   }
