--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@types/node": "^16.10.5",
     "babel-jest": "^27.2.5",
     "ts-node": "^10.3.0"
+  },
+  "dependencies": {
+    "jest": "^27.2.5",
+    "tsc": "^2.0.3"
   }
 }
